Tst/Tests/Pos/Basic/Passive.p
main machine Entry {
    start state init { }
    model fun {passive} foo () { }
}
