Tst/Tests/Neg/Funcs/DstParam.p
main machine Entry {
    model fun bar(dst:int) {
    }
    start state foo {
        entry { }
    }
}
